crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@119.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM nummultirange_test WHERE '{[4.0,4.2), [6.0, 8.0)}'::nummultirange <@ nmr;"
---
SelectStmt@0..87
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..32
    Ident@14..32 "nummultirange_test"
  Whitespace@32..33 " "
  Where@33..38 "WHERE"
  Whitespace@38..39 " "
  AExpr@39..86
    TypeCast@39..79
      AConst@39..64
        Sconst@39..64 "'{[4.0,4.2), [6.0, 8. ..."
      Typecast@64..66 "::"
      TypeName@66..79
        Ident@66..79 "nummultirange"
    Whitespace@79..80 " "
    Op@80..82 "<@"
    Whitespace@82..83 " "
    ColumnRef@83..86
      Ident@83..86 "nmr"
  Ascii59@86..87 ";"

