crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@123.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange(numrange(1,2)) && 'empty'::numrange;"
---
SelectStmt@0..57
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..56
    AExpr@7..56
      FuncCall@7..33
        Ident@7..20 "nummultirange"
        Ascii40@20..21 "("
        FuncCall@21..33
          Ident@21..29 "numrange"
          Ascii40@29..30 "("
          AConst@30..31
            Iconst@30..31 "1"
          Ascii44@31..32 ","
          AConst@32..33
            Iconst@32..33 "2"
      Ascii41@33..34 ")"
      Ascii41@34..35 ")"
      Whitespace@35..36 " "
      Op@36..38 "&&"
      Whitespace@38..39 " "
      TypeCast@39..56
        AConst@39..46
          Sconst@39..46 "'empty'"
        Typecast@46..48 "::"
        TypeName@48..56
          Ident@48..56 "numrange"
  Ascii59@56..57 ";"

