crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@129.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange(numrange(3,4)) && nummultirange(numrange(1,2), numrange(3.5,8));"
---
SelectStmt@0..85
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..82
    AExpr@7..82
      FuncCall@7..33
        Ident@7..20 "nummultirange"
        Ascii40@20..21 "("
        FuncCall@21..33
          Ident@21..29 "numrange"
          Ascii40@29..30 "("
          AConst@30..31
            Iconst@30..31 "3"
          Ascii44@31..32 ","
          AConst@32..33
            Iconst@32..33 "4"
      Ascii41@33..34 ")"
      Ascii41@34..35 ")"
      Whitespace@35..36 " "
      Op@36..38 "&&"
      Whitespace@38..39 " "
      FuncCall@39..82
        Ident@39..52 "nummultirange"
        Ascii40@52..53 "("
        FuncCall@53..65
          Ident@53..61 "numrange"
          Ascii40@61..62 "("
          AConst@62..63
            Iconst@62..63 "1"
          Ascii44@63..64 ","
          AConst@64..65
            Iconst@64..65 "2"
        Ascii41@65..66 ")"
        Ascii44@66..67 ","
        Whitespace@67..68 " "
        FuncCall@68..82
          Ident@68..76 "numrange"
          Ascii40@76..77 "("
          AConst@77..80
            Fconst@77..80 "3.5"
          Ascii44@80..81 ","
          AConst@81..82
            Iconst@81..82 "8"
  Ascii41@82..83 ")"
  Ascii41@83..84 ")"
  Ascii59@84..85 ";"

