crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@13.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{(a,])}'::textmultirange;"
---
SelectStmt@0..33
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..32
    TypeCast@7..32
      AConst@7..16
        Sconst@7..16 "'{(a,])}'"
      Typecast@16..18 "::"
      TypeName@18..32
        Ident@18..32 "textmultirange"
  Ascii59@32..33 ";"

